# web-game

./: .gitignore  CMakeLists.txt  README.md
backend/: server.py
docs/: concept.md
frontend/: game.js  index.html  phaser-game.js  styles.css
src/: main.cpp
